# PeARL-TabFPN

./: .gitignore  ARCHITECTURE_COMPARISON.txt  BIBM2026_PEaRL_TabPFN.tex  CLAUDE.md  COMPARISON_QUICK_START.md  FOLLOW_UP_COMPLETE.txt  FOLLOW_UP_SUMMARY.md  FOLLOW_UP_TABPFN.md  IMPLEMENTATION_GUIDE.md  INDEX.md  PAPER_VERIFICATION.md  README.md  SETUP_DATA.sh  SETUP_ENV.sh  pearl_config.py  pearl_data.py  pearl_eval.py  pearl_figures.py  pearl_main.py  pearl_models.py  pearl_models_tabpfn.py  pearl_paper_generator.py  pearl_survival.py  pearl_train.py  pyproject.toml  requirements.txt  run_comparison.py  run_paper_reproduction.py  run_pearl.py
docs/: APPLE_TO_APPLE.md  REPRODUCIBILITY.md  REPRODUCIBILITY_FIXES.md  WACV_PIPELINE.md
paper/: BIBM2026_PEaRL_TabPFN.tex  README.md
paper/wacv2027/: outline.md  paper.tex
scripts/: fetch_msigdb_hallmark.py  generate_figures.py  reproduce_paper.py  run_reproduction.py  smoke_gpu.py  smoke_no_data.py  smoke_survival.py  smoke_tabpfn3.py  train_baseline.py  train_survival.py  train_tabpfn.py  train_tabpfn3.py  validate.py  verify_data.py
scripts/wacv/: cache_embeddings.py  phase0_validate.py  phase1_accuracy.py  phase2_config_sweep.py  phase3_calibration.py  phase4_pathway_maps.py  phase5_compute.py
slurm/: 00_install.sh  01_download_data.sh  02_validate.sh  03_train_baseline.sh  04_train_tabpfn.sh  05_train_head_to_head.sh  06_generate_figures.sh  submit_all.sh
slurm/wacv/: 00_cache_embeddings.sh  01_phase0_validate.sh  02_phase1_accuracy.sh  03_phase2_config_sweep.sh  04_phase3_calibration.sh  05_phase4_pathway_maps.sh  06_phase5_compute.sh  07_survival.sh  08_reproduce_paper_final.sh  full_paper.sh  install.sh  smoke_gates.sh
src/pearl_tabpfn/: __init__.py  baseline.py  config.py  data.py  encoders.py  eval.py  figures.py  paper_figures.py  reproduction.py  tabpfn3_head.py  tabpfn_head.py  trainer.py
src/pearl_tabpfn/survival/: __init__.py  ab_mil.py  data.py  metrics.py  trainer.py
src/pearl_tabpfn/wacv/: __init__.py  calibration.py  pathway_maps.py  stats.py
