[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pearl-tabpfn"
version = "0.1.0"
description = "PEaRL + TabPFN head-to-head on HEST-1k spatial transcriptomics (BIBM 2026)."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Tirtho Roy" },
  { name = "Souvik Bhattacharjee" },
  { name = "Suparna Das" },
  { name = "Mohammad Hannan" },
  { name = "Saptarshi Sarkar" },
]
keywords = [
  "spatial transcriptomics",
  "computational pathology",
  "foundation models",
  "tabpfn",
  "HEST-1k",
  "UNI",
  "contrastive learning",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "h5py>=3.9",
  "anndata>=0.9",
  "scanpy>=1.10",
  "pillow>=10.0",
  "tqdm>=4.66",
  "huggingface-hub>=0.16",
  "requests>=2.31",
  "torch>=2.1",
  "torchvision>=0.16",
  "timm>=1.0",
  "tabpfn>=0.1.11",
]

[project.urls]
Homepage = "https://github.com/tirtho149/PeARL-TabFPN"
Repository = "https://github.com/tirtho149/PeARL-TabFPN"

[tool.setuptools.packages.find]
where = ["src"]
