[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pearl-tabpfn"
version = "0.2.0"
description = "PEaRL + TabPFN v3 reproduction of arXiv:2510.03455 on HEST-1k + TCGA-BRCA (WACV 2027)."
# tabpfn 8 requires torch>=2.5 which has no Intel-Mac wheels. Python 3.11 is the
# best compat target: torch+tabpfn+scanpy+lifelines all ship wheels for 3.11.
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Ushashi Bhattacharjee" },
  { name = "Alloy Das" },
  { name = "Saria Hannan" },
  { name = "Tirtho Roy" },
  { name = "Soumik Sarkar" },
]
keywords = [
  "spatial transcriptomics",
  "computational pathology",
  "foundation models",
  "tabpfn",
  "HEST-1k",
  "TCGA-BRCA",
  "UNI",
  "contrastive learning",
  "survival analysis",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  # Core numerics + IO
  "numpy>=1.24,<2",          # tabpfn 8 + torch 2.5 not yet on numpy 2
  "pandas>=2.0",
  "scipy>=1.11,<1.16",       # 1.16+ has a pearsonr regression on python 3.14
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  # Imaging / HEST loaders
  "h5py>=3.9",
  "anndata>=0.9",
  "scanpy>=1.10",
  "pillow>=10.0",
  # Progress / HTTP / HF
  "tqdm>=4.66",
  "requests>=2.31",
  "huggingface-hub>=0.16",
  # ML stack — torch>=2.5 is REQUIRED by tabpfn 8 (uses torch.nn.attention API).
  # On a GPU host, install the right CUDA wheel via SETUP_ENV.sh BEFORE
  # `pip install -e .`, otherwise pip pulls a generic build that may not see
  # CUDA. See SETUP_ENV.sh for the matrix.
  "torch>=2.5",
  "torchvision>=0.16",
  "timm>=1.0",
  "tabpfn>=8.0,<9",
]

[project.optional-dependencies]
# TCGA-BRCA survival arm (Figure/Table 3 of the paper). Adds openslide for
# WSI reading + lifelines for C-index. Pull in via `pip install -e .[survival]`.
survival = [
  "openslide-bin>=4.0",
  "openslide-python>=1.4",
  "tifffile>=2024.1",
  "lifelines>=0.27",
]
# Optional dev / smoke utilities (CI, additional pytest plumbing)
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
]
# Convenience meta-extra to install everything
all = [
  "pearl-tabpfn[survival,dev]",
]

[project.urls]
Homepage = "https://github.com/tirtho149/PeARL-TabFPN"
Repository = "https://github.com/tirtho149/PeARL-TabFPN"

[tool.setuptools.packages.find]
where = ["src"]
